[package]
name = "lexa-fs"
version = "0.1.3"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/PhiSyX/lexa-fs"
description = "Utilitaires liés au fs pour les projets."

[dependencies]
lexa-env = { version = "^0.1" }
lexa-prompt = { version = "^0.1" }

log = { version = "^0.4" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
serde_yaml = { version = "^0.9" }
serde_toml = { version = "^0.8", package = "toml" }
console = { version = "^0.15" }
